[project]
name = "kinova"
description = "Kinova Gen3 Face Follow"
version = "0.0"
authors = [
    {name = "Felipe Cadar Chamone"},
]
readme = "README.md"
requires-python = ">=3.8, <3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ultralytics==8.3.24",
    "opencv-python==4.10.0.84",
    "fast-rtsp==0.0.2",
    "kortex_api @ https://github.com/verlab/demos-verlab/releases/download/kinova/kortex_api-2.6.0.post3-py3-none-any.whl",
    # "kortex_api @ https://github.com/verlab/demos-verlab/releases/download/kinova/kortex_api-3.3.0.2-py3-none-any.whl",
    "wget",
    "omegaconf>=2.3.0",
    "rich>=14.0.0",
    "scipy>=1.10.1",
    "protobuf>=3.5.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src/*"]

[tool.isort]
profile = "black"
